--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-spring.datasource.url= jdbc:${MYSQL_URL}
+spring.datasource.url= ${MYSQL_URL}
 
 spring.datasource.username=${MYSQLUSER}
 
