--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:${MYSQL_URL}
-
 spring.datasource.username=${MYSQLUSER}
-
 spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
