--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${MYSQL_URL}
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.datasource.url= jdbc:mysql://root:uphARBEhncLPZc9LDSRT@containers-us-west-190.railway.app:7329/railway
+
 spring.datasource.username=${MYSQLUSER}
+
 spring.datasource.password=${MYSQLPASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
